@@ -3,6 +3,7 @@
 	* Adding MiniReaderSelectionCuts to define cuts
 	* Adding MiniReaderAuxFunctions containing auxiliary functions
 	* Adding DefineSR defining the signal regions cuts
+	* Adding MiniReaderEventFilter to filter events
 
 18-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Added MiniReaderElectron class
